--- a/user/templates/user/navbar.html
+++ b/user/templates/user/navbar.html
@@ -8,7 +8,7 @@
         <meta name="viewport" content="width-device-width, initial-scale=1, maximum-scale=1"/>
         
         <script src="https://cdn.tailwindcss.com"></script>
-        <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/morph/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/solar/bootstrap.min.css" integrity="sha384-NCwXci5f5ZqlDw+m7FwZSAwboa0svoPPylIW3Nf+GBDsyVum+yArYnaFLE9UDzLd" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href=" {% static 'css/styles.css' %} ">
     
 
