--- a/user/templates/user/my-login.html
+++ b/user/templates/user/my-login.html
@@ -6,7 +6,7 @@
     <head>
 
         <title>Login - TrackYourEuro </title>
-        <link rel="stylesheet" type="text/css" href="https://bootswatch.com/5/morph/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@4.5.2/dist/solar/bootstrap.min.css" integrity="sha384-NCwXci5f5ZqlDw+m7FwZSAwboa0svoPPylIW3Nf+GBDsyVum+yArYnaFLE9UDzLd" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href=" {% static 'css/styles.css' %} ">
 
     </head>
